# hill-of-towie-open-source-analysis

./: README.md  aero_up.py  helpers.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml
scripts/uplift_analysis_2025/: aero_up.py  northing.py  tune_up.py
scripts/uplift_analysis_2025/wind_up_config/: HoT_AeroUp_T13.yaml  HoT_PitchTuneUp2024_north.yaml  HoT_PitchTuneUp2024_south.yaml
scripts/uplift_analysis_2025/wind_up_config/asset/: HOT.yaml
scripts/uplift_analysis_2025/wind_up_config/asset/turbine_type/: SWT_2p3_82.yaml
scripts/uplift_analysis_2025/wind_up_config/northing/: optimized_northing_corrections.yaml
scripts/wake_modelling/: t3_t4_wake_study.py
scripts/wake_steering_analysis/: Hill of Towie_elevations.csv  README.md  analyze_uplift.py  check_wake_dir_margin.py  combine_uplift_no_steering.py  combine_uplift_per_steer.py  find_wake_steers.py  hot_wake_steering_helpers.py  inspect_data.py  overall_uplift.py  plot_stddevdir.py  total_uplift.py  uplift_no_steering.py  uplift_per_steer.py  yaw_operation.py  yaw_operation_per_steer.py  z300_wake_steer_animation.py  zx300_wake_steers.py  zxtm_wake_steer_animation.py  zxtm_wake_steers.py
scripts/wake_steering_analysis/controller_config/: wake-steering-lookup.csv
scripts/wake_steering_analysis/wind_up_config/: HOT_dynamic_yaw.yaml
scripts/wake_steering_analysis/wind_up_config/asset/: HOT.yaml
scripts/wake_steering_analysis/wind_up_config/asset/masts_and_lidars/: ZTM_5060.yaml
scripts/wedowind_challenge/: 01_simple-model.py  generate_datapack.py  s01_download_era5_data.py  s01_download_era5_data_as_netcdf.py  s01_download_reference_data.py  s02_collate_era5_files_into_single_parquet.py  s02_collate_netcdf_fiels_into_single_parquet.py  s02_generate_datapack.py  s03_generate_datapack.py  simple_model.py  solution_using_wind_up.py
scripts/wedowind_challenge_2025/: s01_download_reference_data.py  s02_generate_datapack.py  solution_using_wind_up.py
scripts/wfc_analysis_2026/: check_wake_dir_margin.py  combine_uplift_no_steering.py  combine_uplift_per_steer.py  hot_wake_steering_helpers.py  inspect_data.py  total_uplift.py  uplift_cc.py  uplift_ws.py  z300_wake_steer_animation.py  zx300_wake_steers.py  zxtm_wake_steer_animation.py  zxtm_wake_steers.py
scripts/wfc_analysis_2026/floris_config/: hot_emgauss.yaml
scripts/wfc_analysis_2026/floris_config/turbine_inputs/: SGRE-2.3-82.yaml
scripts/wfc_analysis_2026/wind_up_config/: HOT_dynamic_yaw.yaml
scripts/wfc_analysis_2026/wind_up_config/asset/: HOT.yaml
scripts/wfc_analysis_2026/wind_up_config/asset/masts_and_lidars/: ZX300_2428.yaml
scripts/wfc_analysis_2026/wind_up_config/exclusion_periods/: HOT_DY.yaml
scripts/wfc_analysis_2026/wind_up_config/northing_corrections/: HOT_DY_Design_northing.yaml
src/hot_open/: __init__.py  circular_math.py  era5_helpers.py  fastlog_helpers.py  helpers.py  lidar_helpers.py  logging.py  paths.py  scada_helpers.py  settings.py  solar_position.py  sourcing_data.py  unpack.py
tests/: test_circ_math.py  test_era5_helpers.py  test_fastlog_helpers.py  test_load_hot_10min_data.py  test_scada_helpers.py  test_solar_position.py  test_sourcing_data.py
tests/scripts/: test_generate_datapack.py
tests/test_data/: test_load_hot_10min_data_expected.parquet
uplift_analysis/: 01_northing.py  02_aero_up.py  03_tune_up.py  aero_up.py  helpers.py  input_data.py  northing.py  tune_up.py  wedowind_challenge.py  wedowind_submission.py
uplift_analysis/wind_up_config/: HoT_PitchTuneUp2024_east.yaml  HoT_T1_T4_wake_study.yaml  HoT_T3_T4_wake_study.yaml  HoT_northing.yaml  HoT_wedowind_T1.yaml
uplift_analysis/wind_up_config/northing/: optimized_northing_corrections.yaml
